--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <header>
+            <div class="flower"
 
+                <h1 class="flower">
+                Let's make your life <br> refresh everyday <br> <i><strong style="font-size: larger;">with Beautiful Flowers.</strong></i>
+               </h1>
+               <p style="font-size: 25px;">
+                Keeping your gift fresh and blooming, <br>along with knowing some of the meanings of the different types <br> of flowers you receive.
+            </p>
+            <img src="Flower Asset/pngwing 10.png" alt="flower">
+              
+        </div>
+       
     </header>
     <main>
 
