--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
        
     </header>
     <main>
+ <div class="Featured">
+    <h1>
+        Our Featured Flowers
+    </h1>
+    <p style="font-size: larger;">Trusted florist delivering flowers for over 5+ years. Now featuring Designer's Choice <br>for same day or next day flower delivery in Dhaka. We offer a large selection of fresh arrangements and blooming plants available for </p>
 
+ </div>
+  <div class="style">
+    <img style="background-color: aquamarine;" src="Flower Asset/pngwing 6.png" alt="pink flower tree">
+    <img style="background-color: darkseagreen;" src="Flower Asset/pngwing 7.png" alt="yowollo flower">
+    <img  style="background-color: cornsilk;" src="Flower Asset/pngwing 8.png" alt="rose love table">
+
+  </div>
     </main>
     <footer>
 
