--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="banner">
             
-            <div class="flower"
+            <div class="flower">
 
                 <h1 class="flower">
                 Let's make your life <br> refresh everyday <br> <i><strong style="font-size: larger;">with Beautiful Flowers.</strong></i>
@@ -36,9 +36,11 @@
 
  </div>
   <div class="style">
-    <img style="background-color: aquamarine;" src="Flower Asset/pngwing 6.png" alt="pink flower tree">
-    <img style="background-color: darkseagreen;" src="Flower Asset/pngwing 7.png" alt="yowollo flower">
-    <img  style="background-color: cornsilk;" src="Flower Asset/pngwing 8.png" alt="rose love table">
+
+    <img class="style" style="background-color: aquamarine;" src="Flower Asset/pngwing 6.png" alt="pink flower tree">
+    <img class="style" style="background-color: darkseagreen;" src="Flower Asset/pngwing 7.png" alt="yowollo flower">
+    <img class="style" style="background-color: cornsilk;" src="Flower Asset/pngwing 8.png" alt="rose love table">
+    
 
   </div>
     </main>
