--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 class="flower">
                 Let's make your life <br> refresh everyday <br> <i><strong style="font-size: larger;">with Beautiful Flowers.</strong></i>
                </h1>
-               <p style="font-size: 25px;">
+               <p class="flower" style="font-size: 25px;">
                 Keeping your gift fresh and blooming, <br>along with knowing some of the meanings of the different types <br> of flowers you receive.
             </p>
             <button class="button">Shop Now</button>                 
@@ -37,12 +37,32 @@
  </div>
   <div class="style">
 
+
     <img class="style" style="background-color: aquamarine;" src="Flower Asset/pngwing 6.png" alt="pink flower tree">
     <img class="style" style="background-color: darkseagreen;" src="Flower Asset/pngwing 7.png" alt="yowollo flower">
     <img class="style" style="background-color: cornsilk;" src="Flower Asset/pngwing 8.png" alt="rose love table">
     
 
   </div>
+  <section>
+    <div class="part3">
+      <figure>
+        <img class="delivary img" src="Flower Asset/Group 57.png" alt="" style="width: 88px;">
+        <figcaption>Same day delivery,click & collect</figcaption>
+      </figure>
+      <figure>
+        <img src="Flower Asset/Group 58.png" alt="" style="width: 88px;">
+        <figcaption>Fresh flowers,Local growers</figcaption>
+      </figure>
+      <figure>
+        <img src="Flower Asset/Group 59.png" alt="" style="width: 88px;">
+        <figcaption>24/7 Free Support.</figcaption>
+      </figure>
+
+
+
+    </div>
+  </section>
     </main>
     <footer>
 
