--- a/index.html
+++ b/index.html
@@ -58,13 +58,61 @@
         <img src="Flower Asset/Group 59.png" alt="" style="width: 88px;">
         <figcaption>24/7 Free Support.</figcaption>
       </figure>
+    </div>
+  </section>
+  <section >
+    <div class="part4" >
+      <div class="size" >
+         <h1>
+           Hot Deal ! Sale Up To 25% <span style="color: crimson;">OFF</span>  
+         </h1>
+         <p style="font-size: largeer;">This deal is only for the firts time customer <br>we know our customers choice</p>
+            <button class="button"> <SMall>SIGN UP</SMall> <br>NOW </button>  
+        </div>
+            <img src="Flower Asset/pngwing 8.png" alt="" height="400px" width="300px">
+    </div>
+  </section>
+  <section>
+     <div class="best">
+        <h1>OUR BEST SELLAING PRODUCTS.</h1>
+        <div>
+            <img src="Flower Asset/pngwing 10.png" alt="" height="300" width="300">
+            <img src="Flower Asset/pngwing 5.png" alt=""height="300" width="300">
+            <img src="Flower Asset/pngwing 8.png" alt=""height="300" width="300">
+        </div>
+     </div>
+  </section>
+  <section>
+    <div class="insta">
+        <h1 style="font-size: x-large;"> Instagram
+        </h1>
+        <p style="font-size: 20px;" >Finds us on Instagram for more update <br>and collect gift from us
+        </p>
 
+    </div>
+    <div class="photo">
+        <img src="Flower Asset/Rectangle 4.png" alt="">
+        <img src="Flower Asset/Rectangle 5.png" alt="">
+        <img src="Flower Asset/Rectangle 6.png" alt="">
+        <img src="Flower Asset/Flower 01.png" alt="">
 
-
+    </div>
+  </section>
+  <section>
+    <div class="finder">
+       <h1 style="font-size: xxx-large;">Get The Latest Deals</h1>
+       <input style="" type="email" name="email" placeholder="Enter your email here plz.." recured>
+       <button>Subscribe!!</button>
+       
     </div>
   </section>
     </main>
     <footer>
+        <div class="footr">
+            <h1 class="gag" style="color: aliceblue;"><SPan style="font-size: xx-large;color:red;">FLOWER</SPan>SHOP.</h1>
+            <p  style="color: darkorange;align-items: center;">You are in the place where all your beautifull thinging areopeb to shere with <br> your beloved one.</p>
+
+        </div>
 
     </footer>
 </body>
